--- a/index.html
+++ b/index.html
@@ -1,3 +1,17 @@
 <html>
-    
+    <head>
+        <title>Demo Repository</title>
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
+        <h1>Welcome to the Demo Repository</h1>
+        <p>This is a simple HTML page to demonstrate a repository structure.</p>
+        <ul>
+            <li><a href="docs/">Documentation</a></li>
+            <li><a href="src/">Source Code</a></li>
+            <li><a href="tests/">Tests</a></li>
+        </ul>
+        <footer>
+            <p>&copy; 2025 Demo Repository</p>
+        </footer>
 </html>
